fixed spacing issues for each section

--- a/final-project/css/_bootchange.scss
+++ b/final-project/css/_bootchange.scss
@@ -1,4 +1,7 @@
-
+#spytop:before, section:before {
+height:0px;
+margin-top:0px;
+}
 h2,
 .h2,
  {
