--- a/final-project/css/style.scss
+++ b/final-project/css/style.scss
@@ -10,6 +10,8 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+
+
 h2 {
     font-family: 'Pacifico', cursive;
     text-align: center;
@@ -34,6 +36,9 @@ h3 {
     border-color: white;
 }
 
+// .all-padding{
+//     padding:140px 0 140px 0;
+// }
 // .carousel-caption1 {
 //     text-align: left;
 //     font-size: 25px;
@@ -130,65 +135,51 @@ footer {
 ===================================*/
 
 .all-container {
-    margin-top: -160px;
+    margin-top: 60px;
 }
 
 .section-img {
     width: 100%;
-    min-height: 300px;
+    margin-top:-18px;
+        margin-bottom:82px;
+    
 }
 
-/* Angles
-===================================*/
-
-.angle-container {
-    position: relative;
-    width: 100%;
-    .top-angle {
-        position: relative;
-        top: -60px;
-        left: 0;
-        border-bottom: 0 dotted red;
-        border-left: 0 dotted transparent;
-        // Hot tip: Using dotted instead of solid for transparent border fixes rendering issue with some browsers, e.g. firefox rendering the line blurry instead of crisp, change this to solid to see what I mean.
-   
-    }
-    .bottom-angle {
-        position: relative;
-        left: 0;
-        border-right: 0 dotted red;
-        border-bottom: 0 dotted transparent;
-        // Hot tip: Using dotted instead of solid for transparent border fixes rendering issue with some browsers, e.g. firefox rendering the line blurry instead of crisp, change this to solid to see what I mean.
-   
-    }
+.skew{
+         -webkit-transform: skewY(-5deg);
+       -moz-transform: skewY(-5deg);
+         -o-transform: skewY(-5deg);
 }
 
+
+.skew-fix{
+      -webkit-transform: skewY(5deg);
+       -moz-transform: skewY(5deg);
+         -o-transform: skewY(5deg);
+       
+
+}
 /* About us section
 ===================================*/
 
 .img-fix {
     width: 100%;
+
 }
 
 .about-section {
-    width: 100%;
+   
     background-color: #373235;
-    padding-bottom: 60px;
-    padding-top: 220px;
+    padding-bottom:180px;
+ 
+
+   
     h2 {
         padding-bottom: 30px;
     }
 }
 
-#about-top-angle {
-    border-bottom: 0 solid #373235;
-    top: 100px;
-}
 
-#about-bottom-angle {
-    border-right: 0 solid #373235;
-    top: 120px;
-}
 
 .read-btn, .learn-btn {
     margin-top: 30px;
@@ -203,7 +194,12 @@ footer {
 }
 
 .read-btn {
-    margin-bottom: 180px;
+    margin-bottom:180px;
+
+}
+
+.learn-btn{
+     
 }
 
 /* About us section ends
@@ -211,19 +207,14 @@ footer {
 
 /* Prices section 
 ===================================*/
-#prices-top-angle {
-    border-bottom: 0 solid #334d69;
-}
 
-#prices-bottom-angle {
-    border-right: 0 solid #334d69;
-}
 
 .prices-section {
-    margin-top: -60px;
+     margin-top: -18px;
     background: #334d69;
+
     h2 {
-        padding: 100px 0 80px 0;
+        padding-bottom:80px;
     }
 }
 
@@ -256,14 +247,7 @@ footer {
     }
 }
 
-// .ruler{
-//     height:175px;
-//     width:300px;
-//     background:red;
-//     position:absolute;
-//     left:0px;
-//    top:4127px;
-// }
+
 
 /* Prices section ends
 ===================================*/
@@ -275,19 +259,13 @@ footer {
     font-size: 20px;
     font-weight: bold;
     margin-top: -80px;
-    margin-bottom: 120px;
+    margin-bottom:180px;
     border-radius: 5px;
 }
 
 /* rentals section
 ===================================*/
-#rental-top-angle {
-    border-bottom: 0 solid #3fa6ad;
-}
 
-#rental-bottom-angle {
-    border-right: 0 solid #3fa6ad;
-}
 
 .small-ul {
     font-size: 20px;
@@ -299,16 +277,17 @@ footer {
 
 .rental-section {
     background: #3fa6ad;
-    margin-top: -60px;
-    padding-bottom: 120px;
+    margin-top:120px;
+     
 }
 
 .main-rental-contain {
     margin-left: 15px;
     margin-right: 15px;
+     padding-bottom:180px;
     h2 {
         text-align: center;
-        padding: 175px 0 80px 0;
+        padding-bottom:80px;
     }
     .rental-bar {
         background: #1e2e41;
@@ -340,10 +319,13 @@ footer {
 
 .map-contain {
     width: 100%;
+
 }
 
 .map-section {
     background: #4c4c4c;
+    margin-top:-18px;
+    padding-bottom:180px;
     a {
         color: white;
         font-size: 20px;
@@ -353,12 +335,37 @@ footer {
     }
 }
 
-#contact-top-angle {
-    border-bottom: 0 solid #4c4c4c;
-}
 
-#contact-bottom-angle {
-    border-right: 0 solid #4c4c4c;
+
+.hours-section{
+       background: #96d59e;
+       margin-top:120px;
+       padding-bottom:180px;
+
+   
+  
+    h2 {
+        text-align: center;
+        padding-bottom: 80px;
+    }
+    .hours-bar {
+        background: #1e2e41;
+        height: 30px;
+        .hours-circle {
+            width: 80px;
+            height: 80px;
+            background: #faba56;
+            border-radius: 50px;
+            position: relative;
+            bottom: 55px;
+            margin: 0 auto;
+        }
+    }
+    .hours-prices {
+        background: #F1F1F1;
+        text-align: center;
+        margin-bottom: 4px;
+    }
 }
 
 // /* To Top Button Styles
@@ -394,12 +401,14 @@ footer {
 /* Helpers for top position on internal page links
 ====================================================*/
 #spytop:before,
-section:before {
+.all-padding:before {
     display: block;
     content: " ";
     margin-top: -100px;
-    height: 100px;
+    min-height: 100px;
     visibility: hidden;
+    padding-top:140px;
+
 }
 
 /* jQuery Styles
